# Orion_SystemC_Verification

./: CMakeLists.txt  DOCUMENTATION.md  README.md  top.sv
include/graphics/: ModuleGraphicsItem.h  ReadyComponentGraphicsItem.h  TextGraphicsItem.h
include/graphics/ready/: ComponentPortManager.h  ComponentRenderer.h  ComponentResizeHandler.h  ComponentWireManager.h
include/graphics/wire/: WireControlPoints.h  WireGraphicsItem.h  WirePathBuilder.h  WireRenderer.h  WireSegments.h
include/parsers/: ComponentPortParser.h  SvParser.h
include/persistence/: ComponentPersistence.h  ConnectionPersistence.h  RTLModulePersistence.h  SchematicPersistence.h
include/scene/: SchematicScene.h  WireManager.h
include/ui/: MainWindow.h
include/ui/mainwindow/: DraggableListWidget.h  FileManager.h  RecentProjectsManager.h  TabManager.h  TextItemManager.h  WidgetManager.h
include/ui/widgets/: CodeEditorDialog.h  CodeEditorWidget.h  ComponentCardWidget.h  ComponentLibraryWidget.h  ComponentMetadataEditor.h  ComponentPreviewWidget.h  ComponentPropertiesDialog.h  ControlButtonsWidget.h  EditComponentWidget.h  FileExplorerTreeWidget.h  MinimapWidget.h  PortEditorDialog.h  TerminalSectionWidget.h  VerticalToolbar.h  dragdropgraphicsview.h
include/utils/: PersistenceManager.h
resources/: MainWindow.ui  resources.qrc
resources/icons/: README.md  app_icon.ico.placeholder  app_icon.png.placeholder
src/: main.cpp
src/graphics/: ModuleGraphicsItem.cpp  ReadyComponentGraphicsItem.cpp  TextGraphicsItem.cpp
src/graphics/ready/: ComponentPortManager.cpp  ComponentRenderer.cpp  ComponentResizeHandler.cpp  ComponentWireManager.cpp
src/graphics/wire/: WireControlPoints.cpp  WireGraphicsItem.cpp  WirePathBuilder.cpp  WireRenderer.cpp  WireSegments.cpp
src/parsers/: ComponentPortParser.cpp  SvParser.cpp
src/persistence/: ComponentPersistence.cpp  ConnectionPersistence.cpp  RTLModulePersistence.cpp  SchematicPersistence.cpp  code.txt
src/scene/: SchematicScene.cpp  WireManager.cpp
src/ui/: MainWindow.cpp
src/ui/mainwindow/: DraggableListWidget.cpp  FileManager.cpp  RecentProjectsManager.cpp  TabManager.cpp  TextItemManager.cpp  WidgetManager.cpp
src/ui/widgets/: CodeEditorDialog.cpp  CodeEditorWidget.cpp  ComponentCardWidget.cpp  ComponentLibraryWidget.cpp  ComponentMetadataEditor.cpp  ComponentPreviewWidget.cpp  ComponentPropertiesDialog.cpp  ControlButtonsWidget.cpp  DragDropGraphicsView.cpp  EditComponentWidget.cpp  FileExplorerTreeWidget.cpp  MinimapWidget.cpp  PortEditorDialog.cpp  TerminalSectionWidget.cpp  VerticalToolbar.cpp
src/utils/: PersistenceManager.cpp  PersistenceManager_OLD.cpp.bak  PersistenceManager_Refactored.cpp
